# aleo-testnet2-tools

./: Cargo.toml  Dockerfile  LICENSE.md  README.md
cli/: Cargo.toml
cli/src/: main.rs
mainnet/: Cargo.toml
mainnet/src/: lib.rs
pkg/: README.md  aleo_testnet2_wasm_suite.d.ts  aleo_testnet2_wasm_suite.js  aleo_testnet2_wasm_suite_bg.wasm  aleo_testnet2_wasm_suite_bg.wasm.d.ts  package.json  wasm_suite.d.ts  wasm_suite.js  wasm_suite_bg.js  wasm_suite_bg.wasm  wasm_suite_bg.wasm.d.ts
setup/: Cargo.toml
setup/src/: lib.rs
testnet2/: Cargo.toml
testnet2/src/: lib.rs
wasm-suite/: .dockerignore  Cargo.toml  Dockerfile  README.md  index.html  script.mjs  tsconfig.json
wasm-suite/src/: lib.rs
wasm-verify/: Cargo.toml  README.md
wasm-verify/src/: lib.rs
