[package]
name = "aleo-testnet2-wasm-suite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.84"
rand.version = "0.8.0"
getrandom = { version = "0.2", features = ["js"] }

snarkvm-dpc = { version = "0.8.0", features = ["wasm"] }
snarkvm-console = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet", features = [
  "wasm",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
