[package]
name = "aleo-testnet2-wasm-verify"
version = "0.1.2"
edition = "2021"
authors = ["Isaac H <gpg@reheatedcake.io>"]
description = "Aleo Testnet2 signature verification library for the WebAssembly target."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"

snarkvm-dpc = { version = "0.8.0", features = ["wasm"] }
snarkvm-console = { git = "https://github.com/AleoNet/snarkVM.git", branch = "mainnet", features = [
  "wasm",
] }


[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
